<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/mpsdk_white"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <FrameLayout
        android:id="@+id/mpsdkSecurityCodeActivityBackground"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:background="@color/mpsdk_background_blue">

        <com.mercadopago.customviews.MPTextView
            android:id="@+id/mpsdkTimerTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_gravity="top|right"
            android:layout_marginRight="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="14dp"
            android:textSize="17dp"
            android:background="@drawable/mpsdk_title_toolbar"
            android:visibility="gone"
            app:fontStyle="roboto_regular"
            style="@style/mpsdk_title_text"/>

        <FrameLayout
            android:id="@+id/mpsdkCardViewContainer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_gravity="center_horizontal"/>
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:paddingStart="25dp"
        android:paddingEnd="25dp"
        android:paddingTop="20dp"
        android:background="@color/mpsdk_white"
        android:orientation="vertical">
        <LinearLayout
            android:id="@+id/mpsdkCardSecurityCodeContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingStart="10dp"
            android:paddingRight="10dp"
            android:paddingEnd="10dp"
            android:orientation="vertical"
            android:visibility="visible">

            <com.mercadopago.customviews.MPTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lines="1"
                app:fontStyle="regular"
                android:text="@string/mpsdk_security_code"
                android:textColor="@color/mpsdk_color_new_card_text"
                android:textSize="14dp" />

            <com.mercadopago.customviews.MPEditText
                android:id="@+id/mpsdkCardSecurityCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:imeOptions="actionNext"
                android:inputType="number"
                android:maxLength="4"
                app:fontStyle="regular"
                android:singleLine="true"
                android:textColor="@color/abc_search_url_text_selected"
                android:textSize="19dp"
                custom:errorColor="@color/mpsdk_color_red_error" />

        </LinearLayout>

        <com.mercadopago.customviews.MPTextView
            android:id="@+id/mpsdkSecurityCodeErrorText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="5dp"
            android:textSize="16dp"
            android:textColor="@color/mpsdk_color_red_error"
            app:fontStyle="regular"
            android:visibility="invisible"
            tools:text="Revisa este dato"/>
        <FrameLayout
            android:id="@+id/mpsdkSecurityCodeNextButton"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:visibility="visible"
            android:focusable="true"
            android:background="@drawable/mpsdk_button_bg_stroke">
            <com.mercadopago.customviews.MPTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:fontStyle="regular"
                android:textSize="16dp"
                android:textColor="@color/mpsdk_white_background"
                android:text="@string/mpsdk_input_button_next"/>
        </FrameLayout>
        <ProgressBar
            android:id="@+id/mpsdkProgressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:visibility="gone"/>
    </LinearLayout>

</LinearLayout>